update package.json with homepage property

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "around-react",
+  "homepage": "https://iwterry.github.io/around-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
